--- a/package.json
+++ b/package.json
@@ -16,9 +16,26 @@
     "@angular/compiler": "~9.1.9",
     "@angular/core": "~9.1.9",
     "@angular/forms": "~9.1.9",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "@auth0/angular-jwt": "^2.0.0",
+    "@ngrx/effects": "^9.1.2",
+    "@ngrx/store": "^9.1.2",
+    "@syncfusion/ej2-angular-calendars": "^18.1.53",
+    "ajv": "^6.12.2",
+    "alertifyjs": "^1.13.1",
+    "bootstrap": "^4.5.0",
+    "bootswatch": "^4.5.0",
+    "core-js": "^3.6.5",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.5.1",
+    "ng2-file-upload": "^1.4.0",
+    "ngx-bootstrap": "^5.6.1",
+    "ngx-gallery-9": "^1.0.6",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
